Algorithm 3 Implements i.e. completed Step2 of Algorithm4

--- a/sklearn/hfs_c_p.ipynb
+++ b/sklearn/hfs_c_p.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "4a3ad94a",
+   "execution_count": 165,
+   "id": "3acccbae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,6 +13,7 @@
     "import seaborn as sns\n",
     "import math\n",
     "import time\n",
+    "import random\n",
     "plt.style.use('ggplot')\n",
     "\n",
     "from sklearn.model_selection import train_test_split"
@@ -21,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "2e9654b7",
+   "id": "4963fe58",
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "ce41aaa4",
+   "id": "08cecdea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "64e6c683",
+   "id": "859c0a17",
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +770,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "1640efa3",
+   "id": "472f81ae",
    "metadata": {},
    "outputs": [
     {
@@ -1128,7 +1129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55d815d7",
+   "id": "96cf8659",
    "metadata": {},
    "source": [
     "## Phase 1\n",
@@ -1140,7 +1141,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "74acecea",
+   "id": "cb70774f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1168,7 +1169,7 @@
   {
    "cell_type": "code",
    "execution_count": 141,
-   "id": "84997e90",
+   "id": "b3aa7e77",
    "metadata": {},
    "outputs": [
     {
@@ -1454,7 +1455,7 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "id": "e9a3ce5d",
+   "id": "892edf9f",
    "metadata": {},
    "outputs": [
     {
@@ -1736,7 +1737,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5748cbb",
+   "id": "395b4988",
    "metadata": {},
    "source": [
     "## Phase 2\n",
@@ -1747,7 +1748,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "f4dd1bfa",
+   "id": "423cbbc8",
    "metadata": {},
    "outputs": [
     {
@@ -1771,7 +1772,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "3725c313",
+   "id": "049de1d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1801,6 +1802,92 @@
     "    else:\n",
     "        break"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "id": "170d8d87",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys([1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92])"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clusters.keys()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e94943ae",
+   "metadata": {},
+   "source": [
+    "## Phase 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "id": "6132005d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.98463262 0.95768835 0.89434604 ... 0.07695241 0.04480017 0.03601529]\n",
+      " [0.97284598 0.95768835 0.89886379 ... 0.09856889 0.04096416 0.01389279]\n",
+      " [0.97284598 0.94825389 0.89886379 ... 0.10629037 0.06495011 0.01882041]\n",
+      " ...\n",
+      " [0.98172202 0.94656528 0.89886379 ... 0.09856889 0.         0.01244601]\n",
+      " [0.97284598 0.95076633 0.89434604 ... 0.07695241 0.04461068 0.        ]\n",
+      " [0.         0.96491921 0.91680627 ... 0.         0.04480017 0.02095483]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "swarm_size = 15\n",
+    "\n",
+    "# Initalizaing the swarm\n",
+    "# Input: M feature clusters\n",
+    "# Output: N particles \n",
+    "\n",
+    "#selected probability for each cluster\n",
+    "max_list = list()\n",
+    "for values in clusters.values():\n",
+    "    max_list.append(values[0][1])\n",
+    "probabilities = list()\n",
+    "for values in max_list:\n",
+    "    probabilities.append(values/max_list[0])\n",
+    "\n",
+    "\n",
+    "M = len(list(clusters.keys()))\n",
+    "particles = np.zeros((swarm_size, M))\n",
+    "for i in range(swarm_size):\n",
+    "    for j in range(M):\n",
+    "        if random.uniform(0, 1) < probabilities[i]:\n",
+    "            index = random.randint(0, len(clusters[j+1])-1)\n",
+    "            particles[i][j] = clusters[j+1][index][1]\n",
+    "        else:\n",
+    "            particles[i][j] = 0\n",
+    "\n",
+    "print(particles)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45ce7045",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
